client/components/UsernameEntry.module.css
@import url('//fonts.googleapis.com/css2?family=Meddon&family=Nanum+Brush+Script&family=Estonia&family=Noto+Sans+JP:wght@500&family=Permanent+Marker&display=swap');
.background {
    background: #666;
    color: white;
    font-family: sans-serif;
    text-align: center;
    background: url('./mushroom-bg.jpg')
        no-repeat center center fixed;
    background-size: contain;
    /* background-size: max(100vw, 2 * 100vh); */
    width: 100%;
    height: 100%;
    position: absolute;
}

.kaiju {
    width: 400px;
    margin-top: 20px;
}

/* .welcome {
  display: block;
  position: absolute;
  top: 20%;
  left: 50%;
  transform: translate(-50%,-50%);
  font-size: 3vw;
} */

.instructions {
    display: block;
    position: absolute;
    top: 200px;
    left: 50%;
    transform: translate(-50%, -50%);
    color: rgba(255, 255, 255, 0.6);
    font-style: italic;
    font-size: 14px;
    line-height: 0;
}

.input {
    position: absolute;
    top: 230px;
    left: 50%;
    transform: translate(-50%, -50%);
    outline: none;
    border: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    background: rgba(255, 255, 255, 0.3);
    text-align: center;
    width: 600px;
    height: 10px;
    border-radius: 20px;
    font-size: 80px;
    padding: 50px 40px 50px 40px;
    color: white;
    /*   font-family: 'Nanum Brush Script', cursive; */
    font-family: 'Estonia', cursive;
    pointer-events: auto;
    overflow: show;
}

.enterWrapWrap {
    position: absolute;
    top: 98%;
    left: 50%;
    transform: translate(-50%, -100%);
    width: 25%;
    transition: opacity 2s;
}

.enterWrap {
    position: relative;
    display: inline-block;
    width: 100%;
}

.enter {
    position: absolute;
    top: 70%;
    left: 50%;
    transform: translateX(-50%);
    padding: 60px;
    color: white;
    outline: none;
    border: none;
    border-radius: 12px;
}

/* .enterWrap:hover {
  opacity: 1;
} */

.svgimage {
    cursor: pointer;
}

.enter {
    font-family: 'Permanent Marker';
    position: absolute;
    top: 50%;
    left: 50%;
    pointer-events: none;
    transform: translate(-50%, -50%);
    font-size: 44px;
    /*   -webkit-text-stroke: 1px black; */
    text-shadow: 2px 2px #c06d1f, -1px -1px #0a0;
    color: white;
}

